--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "axios": "^0.27.2",
     "element-plus": "^2.1.11",
     "nprogress": "^0.2.0",
+    "qrcode.vue": "^3.3.3",
     "vue": "^3.2.25",
+    "vue-qr": "^4.0.6",
     "vue-router": "^4.0.14",
     "vuex": "^4.0.2"
   },
